--- a/SimpleWeather.UWP/Preferences/Settings_About.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_About.xaml
@@ -3,9 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Preferences"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    d:Background="{ThemeResource RegionBrush}"
     NavigationCacheMode="Required"
     mc:Ignorable="d">
 
@@ -22,11 +24,12 @@
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
             <SolidColorBrush x:Name="ProgressPaintColorBrush" Color="{ThemeResource ProgressPaintColor}" />
+            <SolidColorBrush x:Name="HyperlinkColorBrush" Color="{ThemeResource HyperlinkColor}" />
             <Style
                 x:Key="FeedbackHyperlinkButton"
                 BasedOn="{StaticResource HyperlinkButtonStyle}"
                 TargetType="HyperlinkButton">
-                <Setter Property="Foreground" Value="{ThemeResource HyperlinkColor}" />
+                <Setter Property="Foreground" Value="{ThemeResource HyperlinkColorBrush}" />
                 <Setter Property="ContentTemplate">
                     <Setter.Value>
                         <DataTemplate>
@@ -48,7 +51,7 @@
                 x:Key="RateHyperlinkButton"
                 BasedOn="{StaticResource HyperlinkButtonStyle}"
                 TargetType="HyperlinkButton">
-                <Setter Property="Foreground" Value="{ThemeResource HyperlinkColor}" />
+                <Setter Property="Foreground" Value="{ThemeResource HyperlinkColorBrush}" />
                 <Setter Property="ContentTemplate">
                     <Setter.Value>
                         <DataTemplate>
@@ -67,7 +70,7 @@
                 x:Key="TranslateHyperlinkButton"
                 BasedOn="{StaticResource HyperlinkButtonStyle}"
                 TargetType="HyperlinkButton">
-                <Setter Property="Foreground" Value="{ThemeResource HyperlinkColor}" />
+                <Setter Property="Foreground" Value="{ThemeResource HyperlinkColorBrush}" />
                 <Setter Property="ContentTemplate">
                     <Setter.Value>
                         <DataTemplate>
@@ -91,9 +94,9 @@
     <StackPanel Padding="16">
         <TextBlock
             Name="AppName"
-            x:Uid="AppName"
+            d:Text="SimpleWeather"
             Style="{StaticResource TitleTextBlockStyle}"
-            Text="SimpleWeather" />
+            Text="{helpers:StringRes Name='app_name'}" />
         <TextBlock
             Name="Version"
             FontSize="14"
@@ -148,20 +151,23 @@
         </StackPanel>
         <HyperlinkButton
             x:Name="FeedbackButton"
-            x:Uid="FeebackButton"
+            d:Content="Feedback"
+            d:Foreground="{ThemeResource HyperlinkForegroundThemeBrush}"
             Click="FeedbackButton_Click"
-            Content="Feedback"
+            Content="{helpers:StringRes Name='pref_title_feedback'}"
             Style="{ThemeResource FeedbackHyperlinkButton}" />
         <HyperlinkButton
             x:Name="ReviewButton"
-            x:Uid="ReviewButton"
+            d:Content="Rate and Review"
+            d:Foreground="{ThemeResource HyperlinkForegroundThemeBrush}"
             Click="ReviewButton_Click"
-            Content="Rate and Review"
+            Content="{helpers:StringRes Name='pref_title_rateandreview'}"
             Style="{ThemeResource RateHyperlinkButton}" />
         <HyperlinkButton
             x:Name="TranslateButton"
-            x:Uid="TranslateButton"
-            Content="Help translate the app"
+            d:Content="Help translate the app"
+            d:Foreground="{ThemeResource HyperlinkForegroundThemeBrush}"
+            Content="{helpers:StringRes Name='pref_summary_translate'}"
             NavigateUri="https://poeditor.com/join/project?hash=x9AzamDQO8"
             Style="{ThemeResource TranslateHyperlinkButton}" />
     </StackPanel>
