--- a/SimpleWeather.UWP/Controls/KeyEntryDialog.xaml
+++ b/SimpleWeather.UWP/Controls/KeyEntryDialog.xaml
@@ -3,28 +3,30 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     x:Uid="ConfirmDialog"
+    d:SecondaryButtonText="Cancel"
     PrimaryButtonStyle="{ThemeResource ButtonRevealStyle}"
     PrimaryButtonText="Ok"
     SecondaryButtonClick="ContentDialog_SecondaryButtonClick"
     SecondaryButtonStyle="{ThemeResource ButtonRevealStyle}"
-    SecondaryButtonText="Cancel"
+    SecondaryButtonText="{helpers:StringRes Name='Label_Cancel'}"
     mc:Ignorable="d">
 
     <ContentDialog.Title>
-        <TextBlock x:Uid="Message_EnterAPIKey" Text="Please enter an API Key" />
+        <TextBlock d:Text="Please enter an API Key" Text="{helpers:StringRes Name='message_enter_apikey'}" />
     </ContentDialog.Title>
 
     <StackPanel Orientation="Vertical">
         <TextBox
             x:Name="KeyEntry"
-            x:Uid="KeyEntry"
             Margin="0,4"
             Padding="10"
             VerticalAlignment="Center"
+            d:PlaceholderText="API Key"
             FontSize="12"
-            PlaceholderText="API Key" />
+            PlaceholderText="{helpers:StringRes Name='key_hint'}" />
     </StackPanel>
 </ContentDialog>
