--- a/SimpleWeather.UWP/Preferences/Settings_Credits.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_Credits.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Preferences"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:Background="{ThemeResource RegionBrush}"
@@ -36,9 +37,9 @@
         <Grid>
             <StackPanel>
                 <TextBlock
-                    x:Uid="Pref_TitleProviders"
+                    d:Text="Weather Providers"
                     Style="{StaticResource SettingTitleStyle}"
-                    Text="Weather Providers" />
+                    Text="{helpers:StringRes Name='pref_category_providers'}" />
                 <StackPanel Padding="10">
                     <TextBlock Style="{StaticResource SubtitleTextBlockStyle}" Text="HERE Weather" />
                     <RichTextBlock Padding="0,10">
@@ -132,7 +133,7 @@
                             Source="{ThemeResource WeatherApiImageSrc}" />
                     </HyperlinkButton>
                 </StackPanel>
-                <ContentPresenter x:Uid="Pref_TitleIcons" Content="Icons">
+                <ContentPresenter d:Content="Icons" Content="{helpers:StringRes Name='pref_title_icons'}">
                     <ContentPresenter.ContentTemplate>
                         <DataTemplate>
                             <TextBlock Style="{ThemeResource SettingTitleStyle}" Text="{Binding}" />
