--- a/SimpleWeather.UWP/Preferences/Settings_Icons.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_Icons.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Preferences"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mtuc="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -20,7 +21,7 @@
             VerticalScrollBarVisibility="Auto"
             VerticalScrollMode="Auto">
             <StackPanel>
-                <ContentPresenter x:Uid="Pref_TitleIcons" Content="Icons">
+                <ContentPresenter d:Content="Icons" Content="{helpers:StringRes Name='pref_title_icons'}">
                     <ContentPresenter.ContentTemplate>
                         <DataTemplate>
                             <TextBlock Style="{ThemeResource SettingTitleStyle}" Text="{Binding}" />
