--- a/SimpleWeather.UWP/Setup/SetupWelcomePage.xaml
+++ b/SimpleWeather.UWP/Setup/SetupWelcomePage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Setup"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:Background="{ThemeResource SimpleBlueDarkBrush}"
@@ -27,23 +28,23 @@
                 RelativePanel.AlignVerticalCenterWithPanel="True" />
             <TextBlock
                 x:Name="WelcomeText"
-                x:Uid="WelcomePrompt"
                 Padding="4"
+                d:Text="Welcome to SimpleWeather"
                 FontSize="24"
                 FontWeight="SemiBold"
                 Foreground="#FFFFFFFF"
                 RelativePanel.AlignHorizontalCenterWithPanel="True"
                 RelativePanel.Below="AppLogo"
-                Text="Welcome to SimpleWeather" />
+                Text="{helpers:StringRes Name='setup_welcome_prompt'}" />
             <TextBlock
                 x:Name="WelcomeSubText"
-                x:Uid="WelcomeSubtitle"
                 Padding="4"
+                d:Text="Just a simple weather app"
                 FontSize="18"
                 Foreground="#B3FFFFFF"
                 RelativePanel.AlignHorizontalCenterWithPanel="True"
                 RelativePanel.Below="WelcomeText"
-                Text="Just a simple weather app" />
+                Text="{helpers:StringRes Name='setup_welcome_tagline_prompt'}" />
         </RelativePanel>
     </Grid>
 </Page>
